# kona

./: .gitignore  Cargo.toml  VALIDATION_SUITE.md
crates/node/engine/src/: client.rs
crates/proof/executor/: Cargo.toml
crates/proof/executor/src/: test_utils.rs
crates/proof/executor/src/builder/: assemble.rs  core.rs
crates/proof/executor/tests/: facet_deposit.rs  validate_single_fixture.rs
crates/proof/preimage/src/: errors.rs  native_channel.rs  oracle.rs
crates/proof/preimage/tests/: large_payload_test.rs
crates/protocol/derive/: Cargo.toml
crates/protocol/derive/examples/: derive_facet.rs  inspect_derivation.rs  working_derivation_test.rs
crates/protocol/derive/src/: lib.rs
crates/protocol/derive/src/attributes/: stateful.rs
crates/protocol/derive/src/errors/: pipeline.rs
crates/protocol/derive/src/helpers/: facet_deposits.rs  mod.rs
crates/protocol/derive/tests/: facet_deposits_execution_test.rs  facet_deposits_test.rs
crates/protocol/genesis/: Cargo.toml
crates/protocol/genesis/src/: rollup.rs
crates/protocol/protocol/src/: consts.rs  facet.rs  fct_mint.rs  lib.rs  utils.rs
crates/protocol/protocol/src/info/: facet.rs  mod.rs  variant.rs
scripts/: debug_facet_fault_proof.sh  run_facet_fault_proof.sh  switch-revm.sh  validate.sh  validate_block.sh  validate_blocks_bulk.sh  validate_blocks_scale.sh  validate_facet.sh
