[package]
name = "kona-derive"
description = "A no_std derivation pipeline implementation for the OP Stack"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
# Protocol
kona-genesis.workspace = true
kona-protocol.workspace = true
kona-hardforks.workspace = true

# Alloy
alloy-eips.workspace = true
alloy-rpc-types-engine.workspace = true
alloy-rlp = { workspace = true, features = ["derive"] }
alloy-consensus = { workspace = true, features = ["k256"] }
alloy-primitives = { workspace = true, features = ["rlp", "k256", "map"] }

# Op Alloy
op-alloy-rpc-types-engine.workspace = true
op-alloy-consensus = { workspace = true, features = ["k256"] }
op-alloy-network.workspace = true

# General
tracing.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde = { workspace = true, optional = true }

# `test-utils` feature dependencies
spin = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true, features = ["fmt"] }

[dev-dependencies]
kona-derive = { workspace = true, features = ["test-utils"] }
spin.workspace = true
proptest.workspace = true
serde_json.workspace = true
kona-registry.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true, features = ["fmt"] }
tracing = { workspace = true, features = ["std"] }
alloy-primitives = { workspace = true, features = ["rlp", "k256", "map", "arbitrary"] }
op-alloy-consensus = { workspace = true, features = ["k256"] }

# For examples
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-eth.workspace = true
kona-providers-alloy.workspace = true
clap.workspace = true
eyre.workspace = true
url.workspace = true

# For REVM execution tests
kona-executor.workspace = true
kona-mpt.workspace = true
alloy-evm.workspace = true
alloy-op-evm.workspace = true

[features]
default = []
serde = [
  "dep:serde",
  "kona-protocol/serde",
  "kona-genesis/serde",
  "alloy-primitives/serde",
  "alloy-consensus/serde",
  "op-alloy-rpc-types-engine/serde",
]
test-utils = [
  "dep:spin",
  "dep:tracing-subscriber",
]

[[example]]
name = "derive_blocks"
path = "examples/derive_blocks.rs"

[[example]]
name = "simple_derive_test"
path = "examples/simple_derive_test.rs"

[[example]]
name = "test_facet_derivation"
path = "examples/test_facet_derivation.rs"

[[example]]
name = "derive_blocks_fixed"
path = "examples/derive_blocks_fixed.rs"

[[example]]
name = "test_derivation_simple"
path = "examples/test_derivation_simple.rs"

[[example]]
name = "working_derivation_test"
path = "examples/working_derivation_test.rs"

[package.metadata.cargo-udeps.ignore]
# `kona-derive` is self-referenced in dev-dependencies to always enable the `test-utils` feature in `cfg(test)`.
# this is a false-positive.
development = ["kona-derive"]
